Changes in omnetpp.ini Cpant.ned

--- a/src/omnetpp.ini
+++ b/src/omnetpp.ini
@@ -10,14 +10,14 @@
 #**.appType = "App"
 **.app.packetLength = 1024 bytes
 #network = Mesh
-#destAddress 0 may produce mistakes
+#destination Address 0 in array 'destAddresses' may produce undesirable mistakes
 [Config Mesh-AntHoc]
-network = Mesh
+network = networks.Anthoc
 **.destAddresses = "2 27 56" 
 **.appType = "App"
 **.sort =2
 [Config Cpant]
-network = Cpant
+network = networks.Cpant
 **.destAddresses = "1 5 9 12 4"
 **.appType= "App"
 **.sort=3
@@ -46,7 +46,7 @@ network = Cpant
 #network = networks.RandomGraph
 #**.destAddresses = "0 2"
 
-[Config Mesh-Bursty] # override issues in [General]
+[Config Mesh-Static] # override issues in [General]
 network = networks.Mesh
 **.sort=1
 **.destAddresses = "7 18 52 0"
