AntHocNet  almost complete, checking routing tables

--- a/src/omnetpp.ini
+++ b/src/omnetpp.ini
@@ -9,13 +9,15 @@
 
 #**.appType = "App"
 **.app.packetLength = 1024 bytes
+**.coefPh=0.7
 #network = Mesh
 #destination Address 0 in array 'destAddresses' may produce undesirable mistakes
 [Config Mesh-AntHoc]
 network = networks.Anthoc
 **.destAddresses = "2 27 56" 
-**.appType = "App"
+**.appType = "AntNetApp"
 **.sort =2
+**.setupTime = 2s
 [Config Cpant]
 network = networks.Cpant
 **.destAddresses = "1 5 9 12 4"
