Flooding and statistic news

--- a/src/omnetpp.ini
+++ b/src/omnetpp.ini
@@ -15,9 +15,13 @@
 [Config Mesh-AntHoc]
 network = networks.Anthoc
 **.destAddresses = "2 27 56" 
+**.srcAddresses = "33"
 **.appType = "AntNetApp"
 **.sort =2
+**.metrics=1  # 1: time 2: hops 3: both
+**.flooding= true
 **.setupTime = 2s
+**.sendIaTime= default # time between packets, default : exponetial (1s)
 [Config Cpant]
 network = networks.Cpant
 **.destAddresses = "1 5 9 12 4"
