Data sessions, packet counters in file control-packet.csv

--- a/src/omnetpp.ini
+++ b/src/omnetpp.ini
@@ -6,7 +6,7 @@
 #record-eventlog = true
 #eventlog-message-detail-pattern = Packet:declaredOn(Packet) or bitLength
 #eventlog-message-detail-pattern = *
-
+sim-time-limit = 120s #2minutes of simulation
 #**.appType = "App"
 **.app.packetLength = 1024 bytes
 **.coefPh=0.7
@@ -14,6 +14,8 @@
 #destination Address 0 in array 'destAddresses' may produce undesirable mistakes
 [Config Mesh-AntHoc]
 network = networks.Anthoc
+**.height=default
+**.width = default
 **.destAddresses = "2 27 56" 
 **.srcAddresses = "33"
 **.appType = "AntNetApp"
@@ -21,7 +23,7 @@ network = networks.Anthoc
 **.metrics=1  # 1: time 2: hops 3: both
 **.flooding= true
 **.setupTime = 2s
-**.sendIaTime= default # time between packets, default : exponetial (1s)
+**.sendIaTime= 0.25s # time between packets, default : exponetial (1s)
 [Config Cpant]
 network = networks.Cpant
 **.destAddresses = "1 5 9 12 4"
